# multiple_camera_render

./: .gitignore  .pep8  README.md  __init__.py  blender_manifest.toml  cspell.json  make.bat  pyproject.toml  readthedocs.yaml  requirements-dev.txt  requirements-docs.txt  requirements-tests.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: blender-test-4.2.0.yml  blender-test-4.3.0.yml  blender-test-4.4.0.yml  blender-test-4.5.0.yml  blender-test.yml  spellcheck.yml
datafiles/: blender-extensions-future-image.blend  blender-extensions-preview.blend  docs-favicon.blend  docs-html-logo.blend
docs/: README.md  conf.py  index.rst
docs/_static/: mcr.css
docs/locale/: langs.pot
docs/pages/: about.rst  conflicts.rst  installation.rst  libraries.rst  log_example.inc  naming.rst  per_camera.rst  quickstart.rst  release_notes.rst  select_camera.rst  support.rst
icons/: README.md  blender_icons_geom.py  default.blend  generate.py
release/images/: docs-favicon.blend  extension-preview.blend
scripts/: gen_per_camera_data_paths.py
src/: .gitignore  __init__.py  icons.py  langs.py  main.py  manual_map.py
src/props/: pref.py  (+5 more)
src/test_handlers_conflict_from_lib/wheels/lib_handlers_conflict/: pyproject.toml
src/test_handlers_conflict_from_lib/wheels/lib_handlers_conflict/src/handlers_conflict/: __init__.py
src/test_handlers_conflict_from_lib/wheels/lib_handlers_conflict/src/handlers_conflict/handlers/: composite.py
tests/: README.md  conftest.py  test_conflicts.py  test_per_camera.py  test_render.py  test_select_camera.py
(+143 files in other folders)
